--- a/04.02.2022.md
+++ b/04.02.2022.md
@@ -26,20 +26,20 @@ print(a2 + a1)
 ## Задача №3738. Переставить два слова
 ```
 s = input()
-x = s.find(' ')
-print(s[x+1:] + s[x] + s[:x])
+a = s.find(' ')
+print(s[a+1:] + s[a] + s[:a])
 ```
 ## Задача №3739. Первое и последнее вхождение
 ```
 s = input()
-a = s.find('f')
-b = s.rfind('f')
-if a == -1:
+a1 = s.find('f')
+a2 = s.rfind('f')
+if a1 == -1:
     print()
-elif a == b:
-    print(a)
+elif a1 == a2:
+    print(a1)
 else:
-    print(a, b)
+    print(a1, a2)
 ```
 ## Задача №3740. Второе вхождение
 ```
@@ -61,11 +61,27 @@ s = input()
 s = s[:s.find('h')] + s[s.rfind('h') + 1:]
 print(s)
 ```
-## а №3742. Обращение фрагмента
+## №3742. Обращение фрагмента
 ```
 s = input()
 a1 = s[:s.find('h')] 
 a2 = s[s.find('h'):s.rfind('h') + 1]
 a3 = s[s.rfind('h') + 1:]
 print(a1 + a2[::-1] + a3)
+```
+## Задача №3744. Замена подстроки
+```
+print(input().replace('1', 'one'))
+```
+## Задача №3745. Удаление символа
+```
+print(input().replace('@', ''))
+```
+## Задача №3746. Замена внутри фрагмента
+```
+s = input()
+a1 = s[:s.find('h') + 1] 
+a2 = s[s.find('h') + 1:s.rfind('h')]
+a3 = s[s.rfind('h'):]
+print(a1 + a2.replace('h', 'H') + a3)
 ```
