--- a/04.02.2022.md
+++ b/04.02.2022.md
@@ -85,3 +85,37 @@ a2 = s[s.find('h') + 1:s.rfind('h')]
 a3 = s[s.rfind('h'):]
 print(a1 + a2.replace('h', 'H') + a3)
 ```
+## Задача №3747. Вставка символов
+```
+print("*".join(input()))
+```
+## Задача №3748. Удалить каждый третий символ
+```
+s = input()
+a = ''
+for i in range(len(s)):
+    if i % 3 != 0:
+        a = a + s[i]
+print(a)
+```
+## Задача №3791. Длина отрезка
+```
+def distance(x1, y1, x2, y2):
+    res = (x2 - x1) ** 2 + (y2 - y1) ** 2
+    return res ** 0.5
+x1 = float(input())
+y1 = float(input())
+x2 = float(input())
+y2 = float(input())
+print(distance(x1, y1, x2, y2))
+```
+## Задача №3790. Минимум 4 чисел
+```
+a = int(input())
+b = int(input())
+c = int(input())
+d = int(input())
+def min4(a, b, c, d):
+    return min(min(min(a, b), c), d)
+print(min4(a, b, c, d))
+```
