--- a/18.02.2022.md
+++ b/18.02.2022.md
@@ -2,7 +2,7 @@
 ```
 s = input().split()
 for i in range(0, len(s), 2):
-    print(a[i])
+    print(s[i])
 ```
 
 ## Задача №3829. Четные элементы
@@ -36,7 +36,7 @@ for i in range(1, len(s)):
 ```
 s = [int(i) for i in input().split()]
 for i in range(1, len(s)):
-    if s[i - 1] * a[i] > 0:
+    if s[i - 1] * s[i] > 0:
         print(s[i - 1], s[i])
         break
 ```
