--- a/15.02.23.md
+++ b/15.02.23.md
@@ -18,3 +18,23 @@ def find_max(m):
 find_max(matriza)
 print(find_max(matriza))
 ```
+## Задание 4. Напишите программу, которая выводит на экран столбец матрицы, сумма элементов которого наименьша.
+```
+import random
+M = int(input("Введите число столбцов: "))
+N = int(input("Введите число строк: "))
+matriza = [[random.randrange(0,10) for y in range(M)] for x in range(N)]
+print(matriza)
+for l in range(N):
+    print (matriza[l])
+def find_min(m):
+    min_sum = 100 
+    index = 0
+    for y in range(M):
+        if sum(m[y]) < min_sum:
+            min_sum = sum(m[y])
+            index = y
+    return min_sum, index, matriza[index]
+find_min(matriza)
+print(find_min(matriza))
+```
