--- a/15.02.23.md
+++ b/15.02.23.md
@@ -18,7 +18,7 @@ def find_max(m):
 find_max(matriza)
 print(find_max(matriza))
 ```
-## Задание 4. Напишите программу, которая выводит на экран столбец матрицы, сумма элементов которого наименьша.
+## Задание 4. Напишите программу, которая выводит на экран столбец матрицы, сумма элементов которого наименьшая.
 ```
 import random
 M = int(input("Введите число столбцов: "))
