--- a/21.02.23.md
+++ b/21.02.23.md
@@ -7,3 +7,14 @@ def function():
     print(c)
 function()
 ```
+
+3.
+```
+def function():
+    count = 0
+    list = input()
+    for i in "ауеюэияо":
+        count += list.count(i)
+    print(count)
+function()
+```
