--- a/21.02.23.md
+++ b/21.02.23.md
@@ -7,6 +7,17 @@ def function():
     print(c)
 function()
 ```
+2.
+```
+def function():
+    list = []
+    a = 5
+    for i in range(a):
+        x = int(input())
+        list.append(x)
+    print(max(list))  
+function()
+```
 
 3.
 ```
