--- a/21.02.23.md
+++ b/21.02.23.md
@@ -30,3 +30,120 @@ def function():
 function()
 ```
 4.
+```
+def function():
+    list1 = input()
+    list2 = input()
+    text = ''.join(reversed(list2))  #join(), объединяющий все символы, полученные в результате обратной итерации в новой строке.
+    if list1 == text:
+        print("TRUE")
+    else:
+        print("FALSE")
+function()
+```
+5.
+```
+def function():
+    str1 = input()
+    str2 = input()
+    if str1 in str2:
+        print("TRUE")
+    elif str2 in str1:
+        print("TRUE")
+    else:
+        print("FALSE")
+function()
+```
+
+6.
+
+```
+def function():
+    list1 = input()
+    list2 = input()
+    text = ''.join(reversed(list2))  #join(), объединяющий все символы, полученные в результате обратной итерации в новой строке.
+    if list1 == text:
+        print("TRUE")
+    else:
+        print("FALSE")
+function()
+```
+
+7.
+```
+def function():
+    a = int(input())
+    b = int(input())
+    c = int(input())
+    if a > b and a > c:
+        print("TRUE")
+    elif b > a and b > c:
+        print("TRUE")
+    elif c > a and c > b:
+        print("TRUE")
+    else:
+        print("FALSE")
+function()
+```
+
+8.
+```
+def function():
+    a = int(input())
+    b = int(input())
+    c = int(input())
+    if a == b or a == c:
+        print("TRUE")
+    elif b == a or b == c:
+        print("TRUE")
+    elif c == a or c == b:
+        print("TRUE")
+    else:
+        print("FALSE")
+function()
+```
+
+9.
+```
+def function():
+    str1 = input()
+    str2 = input()
+    str3 = input()
+    if len(str1) > len(str2+str3):
+        print("TRUE")
+    elif len(str2) > len(str1+str3):
+        print("TRUE")
+    elif len(str3) > len(str2+str1):
+        print("TRUE")
+    else:
+        print("FALSE")
+function()
+```
+10.
+```
+def function():
+    str1 = input()
+    str2 = input()
+    str3 = input()
+    if len(str1) == len(str2) or len(str1) == len(str3):
+        print("TRUE")
+    elif len(str2) == len(str1) or len(str2) == len(str3):
+        print("TRUE")
+    elif len(str3) == len(str2) or len(str1) == len(str3):
+        print("TRUE")
+    else:
+        print("FALSE")
+function()
+```
+
+11.
+```
+def function():
+    str1 = input()
+    str2 = input()
+    if str1 == str2:
+        print("TRUE")
+    else:
+        print("FALSE")
+function()
+```
