--- a/21.02.23.md
+++ b/21.02.23.md
@@ -147,3 +147,36 @@ def function():
         print("FALSE")
 function()
 ```
+
+14.
+```
+def function():
+    list = []
+    str1 = input()
+    str2 = input()
+    list.append(str1 + str2)
+    print(list)
+function()
+```
+
+15.
+```
+def function():
+    a = {1:'peanut', 2:'butter', 3:'jelly', 4:'time'}
+    b = {5:'fish', 6:'chips'} 
+    x = a|b
+    print(x)
+function()
+```
+16.
+```
+def factorial(number):
+    if number == 1:
+        return number
+    else:
+        return number * factorial(number - 1)
+
+print(factorial(int(input('Введите число: '))))
+```
+
+17.
