--- a/21.02.23.md
+++ b/21.02.23.md
@@ -180,3 +180,23 @@ print(factorial(int(input('Введите число: '))))
 ```
 
 17.
+```
+def function():
+    l = input()
+    for i in l:
+        print(i)
+function()
+```
+
+18.
+```
+def function():
+    a = []
+    n = int(input())
+    for i in range(n):
+        x = int(input())
+        a.append(x)
+    for z in a:
+        print(z)
+function()
+```
