--- a/21.02.23.md
+++ b/21.02.23.md
@@ -147,6 +147,19 @@ def function():
         print("FALSE")
 function()
 ```
+12.
+```
+def function():
+    a = input()
+    b = input()
+    c = 0
+    for i in a:
+        c = с * i
+    for z in b:
+        c = c * z
+    print(c)
+function()
+```
 
 14.
 ```
