--- a/21.02.23.md
+++ b/21.02.23.md
@@ -1,4 +1,4 @@
-1.
+1. Создайте функцию, которая принимает в качестве аргументов два числа и возвращает их сумму.
 ```
 def function():
     a = int(input("Введите первый аргумент"))
@@ -7,7 +7,7 @@ def function():
     print(c)
 function()
 ```
-2.
+2. Создайте функцию, которая принимает список чисел в качестве аргумента и возвращает наибольшее число в списке.
 ```
 def function():
     list = []
@@ -19,7 +19,7 @@ def function():
 function()
 ```
 
-3.
+3. Создайте функцию, которая принимает строку в качестве аргумента и возвращает кол-во гласных в строке.
 ```
 def function():
     count = 0
@@ -29,7 +29,7 @@ def function():
     print(count)
 function()
 ```
-4.
+4. Создайте функцию, которая принимает две строки в качестве аргументов и возвращает TRUE, если они являются анаграммами друг друга, и FALSE в противном случае.
 ```
 def function():
     list1 = input()
@@ -41,7 +41,7 @@ def function():
         print("FALSE")
 function()
 ```
-5.
+5. Создайте функцию, которая принимает две строки в качестве аргументов и возвращает TRUE, если они являются подстрокой друг друга, и FALSE в противном случае.
 ```
 def function():
     str1 = input()
@@ -55,7 +55,7 @@ def function():
 function()
 ```
 
-6.
+6. Создайте функцию, которая принимает две строки в качестве аргументов и возвращает TRUE, если они являются палиндромами друг друга, и FALSE в противном случае.
 
 ```
 def function():
