--- a/21.02.23.md
+++ b/21.02.23.md
@@ -69,7 +69,7 @@ def function():
 function()
 ```
 
-7.
+7. Создайте функцию, которая принимает в качестве аргументов три числа и возвращает TRUE, если одно из них больше, чем оба других, и FALSE в противном случае.
 ```
 def function():
     a = int(input())
@@ -86,7 +86,7 @@ def function():
 function()
 ```
 
-8.
+8. Создайте функцию, которая принимает в качестве аргументов три числа и возвращает TRUE, если одно из них равно любому из других, и FALSE в противном случае.
 ```
 def function():
     a = int(input())
@@ -103,7 +103,7 @@ def function():
 function()
 ```
 
-9.
+9. Создайте функцию, которая принимает в качестве аргументов три строки и возвращает TRUE, если одно из них лексиграфически больше обеих других, и FALSE в противном случае.
 ```
 def function():
     str1 = input()
@@ -119,7 +119,7 @@ def function():
         print("FALSE")
 function()
 ```
-10.
+10. Создайте функцию, которая принимает в качестве аргументов три строки и возвращает TRUE, если одно из них лексиграфически равна любой из других, и FALSE в противном случае.
 ```
 def function():
     str1 = input()
