--- a/21.02.23.md
+++ b/21.02.23.md
@@ -136,7 +136,7 @@ def function():
 function()
 ```
 
-11.
+11. Создайте функцию, которая принимает в качестве аргументов два списка чисел и возвращает TRUE, если все элементы в этиъ списках равны, и FALSE в противном случае.
 ```
 def function():
     str1 = input()
@@ -147,7 +147,7 @@ def function():
         print("FALSE")
 function()
 ```
-12.
+12. Создайте функцию, которая принимает в качестве аргументов два списка строк и возвращает TRUE, если все элементы в обоих списках являются анаграммами друг друга, и FALSE в противном случае.
 ```
 def function():
     a = input()
@@ -161,7 +161,7 @@ def function():
 function()
 ```
 
-14.
+14. Создайте функцию, которая принимает в два списка строк в качестве аргументов и объединяет иъ в один список.
 ```
 def function():
     list = []
@@ -172,7 +172,7 @@ def function():
 function()
 ```
 
-15.
+15. Создайте функцию, которая принимает в качестве аргументов два словаря и объединяет их в один словарь.
 ```
 def function():
     a = {1:'peanut', 2:'butter', 3:'jelly', 4:'time'}
@@ -181,7 +181,7 @@ def function():
     print(x)
 function()
 ```
-16.
+16. Создайте рекурсивную функцию для вычисления факториалов.
 ```
 def factorial(number):
     if number == 1:
@@ -192,7 +192,7 @@ def factorial(number):
 print(factorial(int(input('Введите число: '))))
 ```
 
-17.
+17. Создайте итератор для перебора всех элементов в массиве.
 ```
 def function():
     l = input()
@@ -201,7 +201,7 @@ def function():
 function()
 ```
 
-18.
+18. Создайте итератор для перебора всех элементов объекта.
 ```
 def function():
     a = []
