Update and rename 21.03.2022.md to 21.03.2023.md

--- a/21.03.2023.md
+++ b/21.03.2023.md
@@ -19,4 +19,19 @@
 result = re.match(r'Bn', 'Bn stoop')
 print(result.group(0))
 ```
+5. Разделите строку на основе шаблона. Используйте функцию re.split(), чтобы разделить строку на основе шаблона регулярного выражения.
+```
+result = re.split(r'f', 'Objectfool')
+print(result)
+```
+6. Квантификаторы. Используйте квантификаторы, такие как *, +, ?, {}, чтобы указать, сколько раз должен встречаться шаблон.
+```
+result = re.findall(r'\w*','Enjoy club in Moskow')
+print(result)
+```
+```
+result = re.findall(r'\w+','Enjoy club in Moskow')
+print(result)
+```
 
+7. Классы символов. Используйте классы символов, такие как \d, \w, \s, для соответсвия люой цифре, символу слова или пробелу соответсвтенно.
