--- a/21.03.2023.md
+++ b/21.03.2023.md
@@ -35,3 +35,25 @@ print(result)
 ```
 
 7. Классы символов. Используйте классы символов, такие как \d, \w, \s, для соответсвия люой цифре, символу слова или пробелу соответсвтенно.
+```
+result = re.findall(r'\w','Good 1 2 3 Hello')
+print(result)
+```
+```
+result = re.findall(r'\s','Good 1 2 3 Hello')
+print(result)
+```
+```
+result = re.findall(r'\d','Good 1 2 3 Hello')
+print(result)
+```
+
+8. Привязки. Используйте привязки, такие как ^ и $, для сопоставления шаблонов в начале и конце строки.
+```
+result = re.findall(r'^\w+','Good 1 2 3 Hello')
+print(result)
+```
+```
+result = re.findall(r'^\w+','Good 1 2 3 Hello')
+print(result)
+```
