--- a/21.03.2023.md
+++ b/21.03.2023.md
@@ -33,6 +33,10 @@ print(result)
 result = re.findall(r'\w+','Enjoy club in Moskow')
 print(result)
 ```
+```
+result = re.findall(r'\w?,'Enjoy club in Moskow')
+print(result)
+```
 
 7. Классы символов. Используйте классы символов, такие как \d, \w, \s, для соответсвия люой цифре, символу слова или пробелу соответсвтенно.
 ```
@@ -54,6 +58,6 @@ result = re.findall(r'^\w+','Good 1 2 3 Hello')
 print(result)
 ```
 ```
-result = re.findall(r'^\w+','Good 1 2 3 Hello')
+result = re.findall(r'$\w+','Good 1 2 3 Hello')
 print(result)
 ```
