--- a/29.03.23.md
+++ b/29.03.23.md
@@ -10,7 +10,11 @@ lst1 = ["A","B","C"]
 lst2 = ["X","Y","Z"]
 
 ```
-
+import itertools
+lst1 = ["A","B","C"]
+lst2 = ["X","Y","Z"]
+for i in (itertools.product(lst1, lst2)):
+    print(i)
 ```
 
 3. Сгенерируйте все комбинации нескольких списков:
