--- a/29.03.23.md
+++ b/29.03.23.md
@@ -40,3 +40,9 @@ l = ['A','B','C']
 for i in range(len(l)+1):
     print([j for j in combinations(l, i)])
 ```
+6. Сгенерировать все перестановки строки: "ABC"
+```
+from itertools import permutations
+for i in permutations('ABC'):
+    print(i, end='\n')
+```
