--- a/29.03.23.md
+++ b/29.03.23.md
@@ -46,3 +46,11 @@ from itertools import permutations
 for i in permutations('ABC'):
     print(i, end='\n')
 ```
+7. Сгенерировать все комбинации строки: "ABC"
+```
+from itertools import permutations
+for i in permutations('ABC'):
+    print(i, end='\n')
+```
+
+8. Сгенерировать все тройки Пифагора с заданным максимальным значением
