--- a/01.06.23 three.md
+++ b/01.06.23 three.md
@@ -11,6 +11,8 @@ class BinaryTree:
     def __init__(self):
         self.root = None
 
+// Определение метода insert, который принимает значение и добавляет его в дерево. Если дерево пустое, то создается корневой узел с заданным значением. Затем происходит поиск места для нового значения в дереве путем сравнения существующих значений с новым значением и переходом к левому или правому потомку до тех пор, пока не будет найдено свободное место для нового значения.
+
     def insert(self, value):
         if not self.root:
             self.root = Node(value)
