--- a/01.06.23 three.md
+++ b/01.06.23 three.md
@@ -36,6 +36,9 @@ class BinaryTree:
                     break
                 else:
                     current_node = current_node.right
+                    
+// Определение метода breadth_first_traversal, который выполняет обход дерева в ширину (BFS) и возвращает список значений всех узлов дерева в порядке обхода BFS. 
+// Если дерево пустое, то метод вернет пустой список.
 
     def breadth_first_traversal(self):
         if not self.root:
