--- a/01.06.23 three.md
+++ b/01.06.23 three.md
@@ -69,3 +69,51 @@ for value in values:
 
 print(tree.breadth_first_traversal()) # Output: [24, 20, 30, 10, 22, 27, 36, 5, 21, 40]
 ```
+
+Задание 2.
+```
+class Node:
+    def __init__(self, value):
+        self.value = value
+        self.left = None
+        self.right = None
+
+class BinarySearchTree:
+    def __init__(self):
+        self.root = None
+
+    def insert(self, value):
+        if not self.root:
+            self.root = Node(value)
+            return
+        
+        current_node = self.root
+        while True:
+            if value < current_node.value:
+                if not current_node.left:
+                    current_node.left = Node(value)
+                    break
+                else:
+                    current_node = current_node.left
+            elif value > current_node.value:
+                if not current_node.right:
+                    current_node.right = Node(value)
+                    break
+                else:
+                    current_node = current_node.right
+
+    def prefix_traversal(self, node):
+        if node is None:
+            return
+        
+        print(node.value)
+        self.prefix_traversal(node.left)
+        self.prefix_traversal(node.right)
+
+bst = BinarySearchTree()
+values = [24, 30, 36, 27, 20, 10, 5, 22, 40, 21]
+for value in values:
+    bst.insert(value)
+
+bst.prefix_traversal(bst.root)
+```
